# test_ocr

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  cli_test.py  detect.py  main.py  pyproject.toml
