[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[[tool.uv.index]]
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
